syntax = "proto3";

//option go_package = "./;protobuf";
//
//package messages;

option go_package = "./protobuf_generated;protobuf_generated";

package protobuf;

message Message {
  uint64 Id = 1;
  string Body = 2;
  uint64 AuthorId = 3;
  uint64 ChatId = 4;
}
